@@ -9,25 +9,35 @@ if iter == 1
   % Store fixed atmosheric grids and data
   xmlStore( fullfile( R.workfolder, 'p_grid.xml' ), R.ATM.P, ...
                                                          'Vector', 'binary' );
-  xmlStore( fullfile( R.workfolder, 't_field.xml' ), R.ATM.T, ...
-                                                        'Tensor3', 'binary' );
   xmlStore( fullfile( R.workfolder, 'z_field.xml' ), R.ATM.Z, ...
                                                         'Tensor3', 'binary' );
+  if Q.T.RETRIEVE
+    R.t_apriori = interpp( R.ATM.P, R.ATM.T, Q.T.GRID );
+  else
+    xmlStore( fullfile( R.workfolder, 't_field.xml' ), R.ATM.T, ...
+                                                        'Tensor3', 'binary' );
+  end
+  
   % Jacobian for baseline fit
   %
-  R.Jbl = zeros( size(R.H_TOTAL,1), size(R.bline_ilims,2)*length(R.ZA_BORESI) );
-  %
-  nf = size( R.H_BACKE, 1 );  % Number of channels
-  c  = 0;
-  %
-  for t = 1 : length(R.ZA_BORESI)
-    for i = 1 : size(R.bline_ilims,2)
-      c  = c + 1;
-      i0 = (t-1) * nf;
-      R.Jbl(i0+R.bline_ilims(1,i):i0+R.bline_ilims(2,i),c) = 1;
+  if Q.BASELINE.RETRIEVE    
+    R.Jbl = zeros( size(R.H_TOTAL,1), size(R.bline_ilims,2)*length(R.ZA_BORESI) );
+    %
+    nf = size( R.H_BACKE, 1 );  % Number of channels
+    c  = 0;
+    %
+    for t = 1 : length(R.ZA_BORESI)
+      for i = 1 : size(R.bline_ilims,2)
+        c  = c + 1;
+        i0 = (t-1) * nf;
+        R.Jbl(i0+R.bline_ilims(1,i):i0+R.bline_ilims(2,i),c) = 1;
+      end
     end
+  else
+    R.Jbl = [];
   end
 end
+
 
 
 %---------------------------------------------------------------------------
@@ -36,7 +46,6 @@ end
 
 vmr  = R.ATM.VMR;
 R.bl = 0;
-
 
 
 %- Loop retrieval quantities
@@ -61,6 +70,10 @@ for i = 1 : length( R.jq )
     end
     clear xmapped ig
    
+   case 'Atmospheric temperatures'   %---------------------------------------
+    %
+    t_field = interpp( Q.T.GRID, R.t_apriori + x(ind), R.ATM.P );
+   
    case 'Sensor pointing'   %-------------------------------------------------
     %
     if iter > 1
@@ -71,11 +84,8 @@ for i = 1 : length( R.jq )
    case 'Frequency'   %--------------------------------------------------------
     %
     if iter > 1
-      L1B = R.L1B;
-      %
-      L1B.LOFreq   = L1B.LOFreq   + x(ind);
-      L1B.RestFreq = L1B.RestFreq + x(ind);
-      L1B.SkyFreq  = L1B.SkyFreq  + x(ind);
+      L1B                  = R.L1B;
+      L1B.Frequency.LOFreq = L1B.Frequency.LOFreq   + x(ind);
       %
       R = q2_arts_sensor_parts( L1B, Q, R, 'mixer' );
       R = q2_arts_sensor_parts( L1B, Q, R, 'backend' );
@@ -96,11 +106,15 @@ end
 
 
 %---------------------------------------------------------------------------
-%--- Update vmr_field
+%--- Update atmospheric fields
 %---------------------------------------------------------------------------
 
 xmlStore( fullfile( R.workfolder, 'vmr_field.xml' ), vmr, ...
                                                         'Tensor4', 'binary' );
+if Q.T.RETRIEVE
+  xmlStore( fullfile( R.workfolder, 't_field.xml' ), t_field, ...
+                                                        'Tensor3', 'binary' );
+end
 
   
   
@@ -138,17 +152,25 @@ if do_j
   
   % Derive pointing off-set weighting functions
   %
-  nf = size( R.H_MIXER, 2 );  % Length of f_grid
-  dza = 0.001;
-  ymat = reshape( y, [nf length(R.ZA_PENCIL) ] );
-  ytmp = interp1( R.ZA_PENCIL, ymat', R.ZA_PENCIL+dza, 'pchip', 'extrap' )'; 
-  Jpoi = R.H_TOTAL * ( ytmp(:) - y ) / dza;
+  if Q.POINTING.RETRIEVE
+    nf = size( R.H_MIXER, 2 );  % Length of f_grid
+    dza = 0.001;
+    ymat = reshape( y, [nf length(R.ZA_PENCIL) ] );
+    ytmp = interp1( R.ZA_PENCIL, ymat', R.ZA_PENCIL+dza, 'pchip', 'extrap' )'; 
+    Jpoi = R.H_TOTAL * ( ytmp(:) - y ) / dza;
+  else
+    Jpoi = [];
+  end
 
   % Derive frequency off-set weighting functions
   %
-  df   = 5e3;
-  ytmp = interp1( R.F_GRID, ymat, R.F_GRID+df, 'pchip', 'extrap' ); 
-  Jfre = R.H_TOTAL * ( ytmp(:) - y ) / df;
+  if Q.FREQUENCY.RETRIEVE    
+    df   = 5e3;
+    ytmp = interp1( R.F_GRID, ymat, R.F_GRID+df, 'pchip', 'extrap' ); 
+    Jfre = R.H_TOTAL * ( ytmp(:) - y ) / df;
+  else
+    Jfre = [];  
+  end
   
   % Expand Jacobian with locally derived parts
   J = [ J, Jpoi, Jfre, R.Jbl ] ; 
