@@ -1,6 +1,11 @@
+2016-02-01  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* Added retrieval of frequency off-set and temperature. Better
+	description of noise in Se.
+
 2016-01-31  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
-	* Retrieval of species, baseline and pointing now in place. 
+	* Retrieval of species, baseline and pointing now in place.
 
 2016-01-29  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
